--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,9 @@ $font-stack : 'Montserrat', sans-serif;
 body {
     background-color: #eee;
     font-family: $font-stack;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 img {
@@ -27,11 +30,18 @@ p {
     font-weight: 500;
     line-height: 21.94px;
     font-size: 16px;
+    color: #4f4f4f;
 }
+
+// .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+//     padding-left: 5px;
+//     padding-right: 5px;
+// }
 
 .intro_body {
     background-color: #fff;
     padding: 20px;
+    border-radius: 16px;
     margin: 50px auto;
 
     .profile_img {
@@ -48,10 +58,12 @@ p {
 
     .name_sec {
         padding-left: 0;
+        padding-right: 0;
     }
 
     .contact {
-
+        padding-left: 0;
+        padding-right: 0;
         i {
             margin-right: 5px;
         }
@@ -59,5 +71,222 @@ p {
 
     .abt_text {
         margin-top: 30px;
+    }
+}
+
+.main_content {
+    margin: 50px auto;
+
+    .skill-set {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 16px;
+
+        p {
+            font-weight: 700;
+        }
+
+        .prog_sect {
+            margin: 20px auto;
+
+            .col-3 {
+                padding-right: 0;
+                padding-left: 0;
+            }
+            .col-9 {
+                align-self: center;
+                padding-left: 0;
+                padding-right: 0;
+            }
+        }
+    }
+
+    .blog {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 16px;
+
+        .b_img {
+            padding-right: 0;
+        }
+
+        .b_text {
+            margin: 50px auto;
+            
+
+            p {
+                color: #828282;
+                font-size: 14px;
+            }
+
+            a {
+                color: #2f80ed;
+                font-size: 14px;
+            }
+        }
+    }
+
+    .hobbies {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 16px;
+        margin-top: 40px;
+
+        .hob-1 {
+            margin: 40px auto;
+
+            img {
+                border-radius: 16px;
+                margin-bottom: 10px;
+                width: 100%;
+                height: 150px;
+            }
+
+            .h_body {
+                color: #828282;
+                font-weight: 500;
+                font-size: 14px;
+            }
+        } 
+    }
+
+    .experience {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 16px;
+        margin-top: 40px;
+        .exp_sec {
+            margin-top: 40px;
+        }
+
+        .exp_y {
+            font-weight: 500;
+            font-size: 12px;
+            color: #828282;
+        }
+
+        .exp-desc {
+            font-size: 14px;
+            color: #828282;
+            font-weight: 500;
+            margin-top: 40px;
+        }
+
+        .exp_t {
+            font-weight: 600;
+            font-size: 14px;
+            color: #333;
+        }
+    }
+}
+
+.projects_top {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 16px;
+    margin-top: 40px;
+
+    .p_txt {
+        margin: 20px auto;
+    }
+
+    .btn-outline-dark {
+        font-family: inherit;
+    }
+
+    .btn-outline-dark:hover {
+        color: #fff;
+        background-color: #2f80ed;
+        border: none;
+    }
+}
+
+.projects_sample {
+    margin-top: 40px;
+
+    .samp_grid {
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 16px;
+        min-height: 500px;
+
+        img {
+            border-radius: 16px;
+        }
+
+        .stack {
+            font-weight: 500;
+            font-size: 12px;
+            margin: 10px auto;
+            color: #4f4f4f;
+        }
+
+        .s_ht {
+            font-size: 22px;
+            line-height: 30px;
+            font-weight: 500;
+            margin-top: 10px;
+        }
+
+        .s_bt {
+            font-size: 14px;
+            line-height: 20px;
+            font-weight: 500;
+            color: #828282;
+            margin: 30px auto;
+        }
+
+        .button {
+            align-self: center;
+            margin: 20px auto;
+
+            .btn {
+                padding: 7px 25px;
+            }
+        }
+    }
+}
+
+.m_btn {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    float: right;
+
+    button:focus {
+        background-color: #2f80ed;
+        color: #fff;
+    }
+}
+footer {
+    margin-top: 100px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+    .cc {
+        font-weight: 700;
+        line-height: 17px;
+        font-size: 12px;
+        text-align: center;
+        align-self: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
+}
+
+
+@media (max-width: 600px) {
+    .container {
+        width: 90% !important;
+    }
+
+    .col-xs-12 {
+        margin: 20px auto;
+    }
+}
+
+@media screen and (max-width: 900px) and (min-width: 600px) {
+    .col-sm-6.col-md-6.col-xs-12.mt {
+        margin-top: 40px;
     }
 }
