--- a/css/style.scss
+++ b/css/style.scss
@@ -289,4 +289,8 @@ footer {
     .col-sm-6.col-md-6.col-xs-12.mt {
         margin-top: 40px;
     }
+
+    section.blog {
+        margin-top: 40px;
+    }
 }
