render issues fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -280,6 +280,11 @@ footer {
         width: 100% !important;
     }
 
+    .profile_img {
+        text-align: center;
+        margin: 0 auto;
+    }
+
     .col-xs-12 {
         margin: 20px auto;
     }
